# auger

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  DEPLOY.systemd.md  DEPLOY.ubuntu.md  Dockerfile  README.md  auger.example.toml  auger.prod.toml  docker-compose.prod.yml  docker-compose.superset.yml  docker-compose.yml  x.ps1  x.sh
deploy/: auger.env.example  auger.service  auger.systemd.toml  build_superset_dashboard.py  generate_pg_schema.py  install.sh
src/: config.rs  main.rs
src/catalog/: infer.rs  mod.rs  provider.rs  store.rs
src/http/: mod.rs  ui.html
src/mongo/: client.rs  convert.rs  exec.rs  mod.rs  pipeline.rs  provider.rs  pushdown.rs
src/server/: compat.rs  encode.rs  mod.rs
