[package]
name = "auger"
version = "0.1.0"
edition = "2024"
description = "SQL gateway for MongoDB — speaks the PostgreSQL wire protocol, powered by Apache DataFusion + Arrow"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bson = { version = "3.1", features = ["serde_json-1", "chrono-0_4"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
datafusion = "54.0"
futures = "0.3"
mongodb = { version = "3.8", default-features = false, features = [
    "bson-3",
    "rustls-tls",
    "dns-resolver",
    "compat-3-3-0",
] }
pgwire = "0.40"
rust_decimal = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
